tests/diagnostics/cases/parse/02_unclosed_brace.home.expected
<repo>/tests/diagnostics/cases/parse/02_unclosed_brace.home:4:1: error[EP0001]: Expected '}' after block

1 parse error(s) found
Checking: <repo>/tests/diagnostics/cases/parse/02_unclosed_brace.home

Success: Type checking passed ✓
