tests/diagnostics/cases/parse/02_unclosed_brace.home
// Parse error: function body brace never closed.
fn main() {
    let x = 1
